--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -365,6 +365,7 @@ section h3.section-subheading {
 @media (min-width: 767px) {
   #portfolio .portfolio-item {
     margin: 0 0 30px;
+height:400px;
   }
 }
 .timeline {
